# api

./: .coveragerc  .dockerignore  .env.dist  .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  README.rst  SECURITY.md  alembic.ini  docker-compose.yml  entrypoint.sh  logging.ini  prospector.yml  pyproject.toml  pytest.ini  python-app.yml  requirements.txt  setup.cfg  tasks.py  test_entrypoint.sh
.github/workflows/: app.yml  aws.yml  codeql-analysis.yml
.terraform/aws/: main.tf
.terraform/gcp/: main.tf
composes/: local.yml  server.yml  test.yml
src/: manage.py  urls.py
src/api/: asgi.py  wsgi.py
src/authentication/: emails.py  routers.py  serializers.py  tests.py  tokens.py  views.py
src/authentication/api/v1/: serializers.py  views.py
src/authentication/templates/: activation.html  activation.txt
src/authentication/tests/: factory.py  test_user.py
src/messenger/: admin.py  apps.py  choice.py  choices.py  consumers.py  documents.py  fields.py  managers.py  middleware.py  mixins.py  models.py  permissions.py  routers.py  routing.py  serializers.py  signals.py  tests.py  views.py
src/messenger/api/v1/: serializers.py  views.py
src/messenger/management/commands/: fill_database.py
src/messenger/migrations/: 0001_initial.py  0002_alter_file_document.py  0002_auto_20201121_1412.py  0002_auto_20210312_1701.py
src/messenger/tests/: __init__.py  chat.py  factory.py  file.py  message.py  test_chat.py  test_file.py  test_message.py
src/messenger/websocket/: consumers.py  handler.py  middleware.py
src/server/: asgi.py  wsgi.py
src/settings/: __init__.py  default.py  development.py  production.py  test.py
symfall/: .env.dev  .env.dist  =2.8  docker-compose.yml  manage.py  requirements.txt
symfall/messenger/: admin.py  choices.py  models.py  serializers.py  tests.py  views.py
symfall/messenger/migrations/: 0001_initial.py
symfall/symfall/: asgi.py  settings.py  urls.py  wsgi.py
symfall/symfall_app/: apps.py  models.py  views.py
symfall/symfall_app/migrations/: 0001_initial.py
