[tool.poetry]
name = "Symfall"
version = "1.1.0"
description = "Simple messenger to improve self skills"
authors = ["swaroggot", "valeriiduz"]

[tool.poetry.dependencies]
python = "3.9.7"
packaging = "20.4"

psutil = "5.7.2"
sentry-sdk = "1.3.0"
psycopg2-binary = "2.8.6"

Django = "3.2.14"
drf-yasg = "1.20.0"
djangorestframework = "3.12.4"
django-extensions = "3.1.3"
django-health-check = "3.16.2"
django-cors-headers = "3.7.0"
django-elasticsearch-dsl = "7.2.2"
django-filter = "2.4.0"
django-storages = "1.11.1"
channels = "3.0.3"
channels-redis = "3.2.0"
redis = "3.5.3"
daphne = "3.0.2"

[tool.poetry.dev-dependencies]

black = "22.3.0"
autoflake = "1.4"
isort = "5.6.2"
pytype = "2022.3.8"
MonkeyType = "22.2.0"
prospector = "1.7.7"
darglint = "1.8.1"

factory_boy = "3.2.1"
Faker = "8.10.3"
Pillow = "9.0.1"
freezegun = "1.1.0"
coverage = "5.5"
tblib = "1.7.0"
cosmic-ray = "8.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
include = "\\.pyi?$"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
